--- a/react-ts/package.json
+++ b/react-ts/package.json
@@ -12,7 +12,8 @@
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.10.15",
+    "@mui/icons-material": "^5.10.16",
+    "@mui/material": "^5.10.17",
     "axios": "^1.2.0",
     "mobx": "^6.7.0",
     "mobx-react-lite": "^3.4.0",
